# hermes-data-pipeline

./: .gitignore  Cargo.toml  README.md
.github/workflows/: feed-health.yml  postgres-backup.yml
.kiro/agents/: pagupon-data.json
.kiro/hooks/: code-quality-review.kiro.hook  dockerfile-sync-check.kiro.hook  grep-model-consumers.kiro.hook  orchestrator-flow-reminder.kiro.hook  post-task-qa-validation.kiro.hook  pre-write-standards-check.kiro.hook  safe-shell-guard.kiro.hook  session-retrospective.kiro.hook  test-first-secure.kiro.hook  update-docs-on-change.kiro.hook
.kiro/settings/: lsp.json
.kiro/skills/: developer.md  devsecops.md  orchestrator.md  principal-data-intelligence.md  qa-engineer.md  retrospective.md  security-performance-engineer.md
.kiro/steering/: coding-standards.md  context-management.md  debugging.md  intelligence-patterns.md  learnings.md  product.md  prompt-defense.md  research-first.md  rust-patterns.md  security-review.md  structure.md  tdd-workflow.md  tech.md
docs/: MIGRATION-ROLLOUT-GUIDE.md  PIPELINE.md
docs/requirements/: 001-news-source-resilience.md
enhanced-idx-analyst/: .env.example  .gitignore  NOTION_INTEGRATION_TODO.md  README.md  compare_systems.py  config.py  idx_ai_analyst_enhanced.py  requirements.txt
enhanced-idx-analyst/modules/: __init__.py  data_gathering.py  debate_engine.py  dividend_sync.py  idx_scraper.py  memory_logger.py  notion_integration.py  output_formatter.py  (+2 more)
infrastructure/: .env.example  README.md  docker-compose.yml
knowledge-ingestion-pipeline/: README.md
market-data-pipeline/: README.md  SOCIAL_ECONOMIC_INTELLIGENCE_TOPOLOGY.md  commodity_collector.py
news-social-intelligence-data-pipeline/: .env  Cargo.toml  README.md  news_staging.db  social_intel_cron.py
news-social-intelligence-data-pipeline/social_intel/: __init__.py  collector.py  hackernews.py  near_duplicate.py  pipeline_integration.py  reddit.py  x_twitter.py  youtube.py
news-social-intelligence-data-pipeline/social_intel/lib/: __init__.py  http.py  relevance.py
news-social-intelligence-data-pipeline/src/: lib.rs  main.rs
news-social-intelligence-data-pipeline/src/arangodb/: ingester.rs  mod.rs  schema.rs
news-social-intelligence-data-pipeline/src/collectors/: mod.rs
news-social-intelligence-data-pipeline/src/economic/: bank_indonesia.rs  coingecko.rs  fred.rs  gdelt.rs  mod.rs  models.rs  yahoo_commodities.rs
news-social-intelligence-data-pipeline/src/embedders/: mod.rs
news-social-intelligence-data-pipeline/src/health/: mod.rs
news-social-intelligence-data-pipeline/src/idx_analyst/: analyst.rs  config.rs  data_source.rs  debate.rs  formatter.rs  memory.rs  mod.rs  models.rs  risk.rs  scraper.rs  signal_lookup.rs  trader.rs  types.rs
news-social-intelligence-data-pipeline/src/labelers/: mod.rs
news-social-intelligence-data-pipeline/src/social/: collector.rs  dedup.rs  hackernews.rs  mod.rs  reddit.rs  relevance.rs  x_twitter.rs  youtube.rs
news-social-intelligence-data-pipeline/src/storage/: mod.rs
news-social-intelligence-data-pipeline/src/unlimited/: mod.rs
scripts/: README.md  bumn_export_monitor.py  daily_digest.py  daily_digest_financial_intelligence.py  fundamental_analysis_check.py  idx_ai_analyst.sh  idx_ai_analyst_enhanced.sh  inco_deepdive.py  inco_full_fundamental.py  inco_sentiment_analysis.py  market_summary.py  portfolio-intelligence-cron.sh  portfolio_fundamental_scraper.py  portfolio_retirement_assessment.py  portfolio_sentiment_analysis.py  screener-digest-cron.sh  screener-fetch-cron.sh  sospol_accumulation_digest.py  stock_alerts_bumn_export.py
social-media-pipeline/: README.md
src/: handlers.rs  main.rs  models.rs  prediction_engine.rs  services.rs  social_sentiment.rs  websocket.rs
(+29 files in other folders)
