[package]
name = "intelligence-system-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# HTTP client for external APIs - using rustls to avoid OpenSSL system dependency
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Async utilities
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Random number generation
rand = "0.8"

# Mathematical computations for correlation engine
ndarray = "0.15"

# Parallel processing for performance
rayon = "1.7"

# Regular expressions for text analysis
regex = "1.5"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Advanced string processing for Prof Jiang analysis
unicode-segmentation = "1.10"

# WebSocket support for real-time updates
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Environment variables for configuration
dotenv = "0.15"

# Indonesian stock market data APIs
yahoo_finance_api = "2.0"

# Advanced ML and Statistical Libraries for Aladdin-style Analytics (temporarily simplified)
# candle-core = "0.6"
# candle-nn = "0.6" 
# candle-transformers = "0.6"
linfa = "0.7"
linfa-trees = "0.7"
linfa-linear = "0.7" 
ndarray-stats = "0.5"
statrs = "0.16"

# Financial Analytics and Risk Management
quantlib = { version = "0.1", optional = true }
ta = "0.5"

# Time Series Analysis
prophet = { version = "0.3", optional = true }
tch = { version = "0.13", optional = true }

# Social Media APIs (temporarily disabled for OpenSSL-free compilation)
# twitter-v2 = "0.1"
async-trait = "0.1"

# Advanced HTTP and WebSocket
tungstenite = "0.20"
url = "2.4"

# Parallel and High-Performance Computing
crossbeam = "0.8"
dashmap = "5.5"

# Configuration and Environment
config = "0.14"

[features]
default = ["ml-basic"]
ml-basic = ["quantlib", "prophet"]  
ml-full = ["quantlib", "prophet", "tch"]