[package]
name = "news-collector"
version = "0.1.0"
edition = "2021"
description = "Rust news collector with Prof Jiang event extraction and unlimited news daemon"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# RSS parsing
feed-rs = "2"
rss = "2"

# JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SQLite
rusqlite = { version = "0.32", features = ["bundled"] }

# Qdrant
qdrant-client = "1"

# Scheduling
tokio-cron-scheduler = "0.13"

# HTML processing
scraper = "0.21"
ammonia = "4"
html-escape = "0.2"

# XML parsing (for Reddit Atom feeds)
quick-xml = "0.36"

# URL encoding
urlencoding = "2"

# Regex (for HTML stripping in social intel)
regex = "1"

# Hashing for dedup
sha2 = "0.10"
hex = "0.4"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# UUID
uuid = { version = "1", features = ["v4"] }

# Retry logic
backoff = { version = "0.4", features = ["tokio"] }

# Shell expansion (tilde in paths)
shellexpand = "3"

# Home directory resolution
dirs = "5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
